# laser-engraver

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  glbr-settings.cpp  glbr-settings.hpp  glbr-settings.ui  grid-scene.cpp  grid-scene.h  laser-engraver.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  workspace.cpp
.github/workflows/: ccpp.yml  compile.yml
src/: add-engraver-dialog.cpp  add-engraver-dialog.h  add-engraver-dialog.ui  add-printer-dialog.cpp  add-printer-dialog.h  add-printer-dialog.ui  engraver-connection.cpp  engraver-connection.h  engraver-manager.cpp  engraver-manager.h  engraver-settings.h  gcode-generator.cpp  gcode-generator.hpp  gui-settings.cpp  gui-settings.h  instructions.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  move-tool-dialog.cpp  move-tool-dialog.h  move-tool-dialog.ui  qt-wrappers.cpp  qt-wrappers.h  select-engraver-dialog.cpp  select-engraver-dialog.h  select-engraver-dialog.ui  semi-gcode.cpp  semi-gcode.hpp  sheets.hpp  spindle-position.hpp  upload-strategy.cpp  upload-strategy.hpp  utils.hpp  workspace.cpp  workspace.h
src/benchmark/: main.cpp
src/dialogs/: add-engraver-dialog.cpp  add-engraver-dialog.h  add-engraver-dialog.ui  add-font-dialog.cpp  add-font-dialog.h  add-font-dialog.ui  dialogs.cpp  dialogs.hpp  font-dialog.cpp  font-dialog.h  font-dialog.ui
src/engraver/spindle/: manager.cpp  manager.h
src/log/: model.cpp  model.h
src/models/: graphical-object-model.cpp  graphical-object-model.h
src/ut/: instruction-tests.cpp  main.cpp
src/widgets/: engraver-movement-settings-widget.cpp  engraver-movement-settings-widget.h  engraver-movement-settings-widget.ui  graphics-view.cpp  graphics-view.h
